# tugas_magang_iris

tugas_kordinat_robot/: CMakeLists.txt  main.cpp
tugas_mengukur_jarak_bola/: main.cpp
tugas_robotik_mengukur_jarak_bola/: CMakeLists.txt  main.cpp
